# puruxzi

./: .coverage  .gitignore  README.md  architect.py  coverage.xml  dev_test.py  kernel_map.json  memory.json  pyproject.toml  research_report.md  runner.py  seed_prompt.md  setup.py  test_status.py
.github/workflows/: python-tests.yml
builder_tool/core/: cli.py
kernels/meta/: meta_kernel_recursive.yaml
organs/brain/: brain.py
organs/bridge/: bridge.py
organs/fs/: fs.py
organs/kernel/: context.py  kernel.py  kernel_map.yaml  requirements.txt
organs/mentor/: mentor.py
organs/operator/: README.md  agent_operator.py  operator.py
organs/status_checker/: README.md  status_checker.py
organs/tasks/: __init__.py  build_report.py  draw.py  greet.py  tasks.py
outputs/: final_report_dying_node.txt
src/puruxzi/: __init__.py  agent_operator.py  architect.py  cli.py  engineer.py  memory.json  memory.py  mentor.py  operator.py  pyproject.toml  task.py  task_registry.py
src/puruxzi/assistant/: main.py  memory.py  router.py
src/puruxzi/assistant/tools/: calculator.py  dolphin.py  quote.py
src/puruxzi/task/: task_registry.py
src/puruxzi/tasks/: __init__.py  build_report.py  chat.py  hello.py
test/: test_bridge_run.py
tests/: test_sample.py
