[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "puruxzi"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
puruxzi = "puruxzi.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
